--- a/playbook1.yaml
+++ b/playbook1.yaml
@@ -31,6 +31,12 @@
           access: Allow
           priority: 1001
           direction: Inbound
+        - name: http
+          protocol: Tcp
+          destination_port_range: 80
+          access: Allow
+          priority: 1002
+          direction: Inbound
   - name: Create virtual network interface card
     azure_rm_networkinterface:
       resource_group: proj1-rg
